# modern_cpp_project_template

./: .codecov.yml  .travis.yml  README.md
src/: CMakeInstallation.cmake  CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/cmake/: Boost.cmake  Catch.cmake  CodeCoverage.cmake  clang.cmake  trompeloeil.cmake
src/include/my_project/: dummy.h
src/project_library/: CMakeLists.txt  project_library_version.h.in
src/project_library/src/: dummy.cpp
src/project_library/test/: CMakeLists.txt
src/project_library/test/src/: dummy_scenario_catch.cpp  dummy_test_catch.cpp
src/project_library/tests/: CMakeLists.txt  coverage.ignore
src/project_library/tests/src/: dummy_scenario_catch.cpp  dummy_test_catch.cpp  main.cpp  mock_test_catch.cpp
